--- a/NMEA-Parser-Tests/NMEA-Parser-Tests.csproj
+++ b/NMEA-Parser-Tests/NMEA-Parser-Tests.csproj
@@ -53,6 +53,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RecMinSpecificGnssDataTest.cs" />
     <Compile Include="SatellitesInViewTest.cs" />
   </ItemGroup>
   <ItemGroup>
